--- a/module-01/index.html
+++ b/module-01/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
   <meta charset="utf-8">
 
-  <title>HTML5 Template</title>
+  <title>Atlanta transportation</title>
 
   <style>
     body,
